# Ocean-Tides

./: .gitignore  README.md
.github/workflows/: ci.yml
hotel_campaign_automation/: ADVANCED_DOCUMENTATION.md  pyproject.toml  test_backend.py  test_gemini_api.py
hotel_campaign_automation/frontend/: package-lock.json  package.json  trigger_workflow.txt
hotel_campaign_automation/frontend/src/: App.js  App.test.js  DashboardPage.js  LoginPage.js
hotel_campaign_automation/hotel_campaign_automation/: app.py  campaign_trigger.py  forecasting.py  segmentation.py  time_series_models.py
