[tool.poetry]
name = "hotel-campaign-automation"
version = "0.1.0"
description = ""
authors = ["devin-ai-integration[bot] <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
prophet = "^1.1.5"
google-generativeai = "^0.8.2"
tensorflow = "^2.17.0"
requests = "^2.32.3"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
